added margin to top

--- a/IntermediateExercise/style.css
+++ b/IntermediateExercise/style.css
@@ -7,6 +7,7 @@
 	border: 1px solid black;
 	width: 225px;
 	margin: auto;
+	margin-top: 30px;
 	padding:  0 4px 0 4px;
 	font-size: 10px;
 }
@@ -79,5 +80,4 @@
 }
 .bold{
 	font-weight: bold;
-}
 }
